Fixed students not showing Grade Level in StudentCard module, Fixed null exceptions in starDetail because reduce() function was being called on objects without complete request information

--- a/Student1.ParentPortal.Web/clientapp/css/StyleSheet.css
+++ b/Student1.ParentPortal.Web/clientapp/css/StyleSheet.css
@@ -36,6 +36,7 @@ h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
 }
 
 .app-prevent-overflow {
+    overflow: hidden;
     word-wrap: normal;
 }
 
